# docs/swagger.json
@@ -81,7 +81,7 @@
                 "songs": {
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "type": "integer"
                     }
                 }
             }
@@ -90,6 +90,26 @@
             "type": "object",
             "properties": {
                 "songs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/handler.SongResponse"
+                    }
+                }
+            }
+        },
+        "handler.SongResponse": {
+            "type": "object",
+            "properties": {
+                "singerName": {
+                    "type": "string"
+                },
+                "songName": {
+                    "type": "string"
+                },
+                "songNumber": {
+                    "type": "integer"
+                },
+                "tags": {
                     "type": "array",
                     "items": {
                         "type": "string"
