# internal/handler/recommend.go
@@ -7,14 +7,23 @@ import (
 	"google.golang.org/protobuf/types/known/structpb"
 	"log"
 	"net/http"
+	"strconv"
+	"strings"
 )
 
 type RecommendRequest struct {
-	Songs []string `json:"songs"`
+	Songs []int `json:"songs"`
 }
 
 type RecommendResponse struct {
-	Songs []string `json:"songs"`
+	Songs []SongResponse `json:"songs"`
+}
+
+type SongResponse struct {
+	SongNumber int      `json:"songNumber"`
+	SongName   string   `json:"songName"`
+	SingerName string   `json:"singerName"`
+	Tags       []string `json:"tags"`
 }
 
 // GetRecommendation godoc
@@ -29,7 +38,7 @@ type RecommendResponse struct {
 func (pineconeHandler *PineconeHandler) GetSongRecommendation(c *gin.Context) {
 	request := &RecommendRequest{}
 	if err := c.ShouldBindJSON(&request); err != nil {
-		c.JSON(http.StatusBadRequest, NewBaseResponse("error", err.Error()))
+		c.JSON(http.StatusBadRequest, NewBaseResponse("error", nil))
 		//c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
@@ -37,7 +46,7 @@ func (pineconeHandler *PineconeHandler) GetSongRecommendation(c *gin.Context) {
 	// 리퀘스트에서 노래 목록을 슬라이스 형식으로 변환합니다.
 	songs := make([]string, 0, len(request.Songs))
 	for _, song := range request.Songs {
-		songs = append(songs, song)
+		songs = append(songs, strconv.Itoa(song))
 	}
 
 	// vectorid로 vector 조회하기
@@ -46,7 +55,7 @@ func (pineconeHandler *PineconeHandler) GetSongRecommendation(c *gin.Context) {
 		log.Fatalf("Failed to fetch vectors, error: %+v", err)
 	}
 
-	returnSongs := make([]string, 0, len(res.Vectors))
+	returnSongs := make([]SongResponse, 0, len(res.Vectors))
 
 	for i := 0; i < len(songs); i++ {
 		vector, exists := res.Vectors[songs[i]]
@@ -74,12 +83,31 @@ func (pineconeHandler *PineconeHandler) GetSongRecommendation(c *gin.Context) {
 		}
 		// Iterate through the matches in the QueryVectorsResponse
 		for j := 0; j < len(values.Matches); j++ {
-			returnSongs = append(returnSongs, values.Matches[j].Vector.Id)
+			v := values.Matches[j].Vector
+			songNumber, err := strconv.Atoi(v.Id)
+			if err != nil {
+				log.Fatalf("Failed to convert ID to int, error: %+v", err)
+			}
+
+			returnSongs = append(returnSongs, SongResponse{
+				songNumber,
+				v.Metadata.Fields["song_name"].GetStringValue(),
+				v.Metadata.Fields["singer_name"].GetStringValue(),
+				parseTags(v.Metadata.Fields["ssss"].GetStringValue()),
+			})
 		}
 	}
 
 	// Returning the result as a JSON response
 	c.JSON(http.StatusOK, NewBaseResponse("ok", RecommendResponse{returnSongs}))
+}
+
+func parseTags(tags string) []string {
+	tagList := strings.Split(tags, ",")
+	for i := range tagList {
+		tagList[i] = strings.TrimSpace(tagList[i])
+	}
+	return tagList
 }
 
 func (pineconeHandler *PineconeHandler) GetPineconeIndex(c *gin.Context) {
